# ConvolutionalNetwork

./: .gitignore  CMakeLists.txt  ConvolutionalLayer.cpp  ConvolutionalLayer.h  ConvolutionalNeuralNetwork.cpp  ConvolutionalNeuralNetwork.h  ConvolutionalNeuron.cpp  ConvolutionalNeuron.h  FeatureMap.cpp  FeatureMap.h  Filter.cpp  Filter.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  Matrix.cpp  Matrix.h  NeuralLayer.cpp  NeuralLayer.h  Neuron.cpp  Neuron.h  NeuronStructure.h  OutputLayer.cpp  OutputLayer.h  PoolingLayer.cpp  PoolingLayer.h  RandomGenerator.cpp  RandomGenerator.h  ReluLayer.cpp  ReluLayer.h  SigmoidNeuron.cpp  SigmoidNeuron.h  main  main.cpp  makefile  test
tests/: Test.cpp  Test.h  TestMatrixOperations.cpp  TestMatrixOperations.h  myTest.cpp
